<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF4F2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.402">

            <ImageButton
                android:id="@+id/mobile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/phone" />

            <ImageButton
                android:id="@+id/flag"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/nig" />

            <ImageButton
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/dp" />

            <ImageButton
                android:id="@+id/wallet"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/wallet" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#012832"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="40dp"
                android:paddingTop="5dp"
                android:paddingRight="40dp"
                android:paddingBottom="5dp"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#012832"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="40dp"
                android:paddingTop="5dp"
                android:paddingRight="40dp"
                android:paddingBottom="5dp"
                android:text="@string/slack_id"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#012832"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="40dp"
                android:paddingTop="5dp"
                android:paddingRight="40dp"
                android:paddingBottom="5dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="381dp"
            android:layout_height="28dp"
            android:layout_marginTop="50dp"
            android:background="#FF9800"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:paddingLeft="10dp"
                android:text="@string/likes_header"
                android:textColor="#02242C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:paddingLeft="15dp"
                android:text="@string/dislikes_header"
                android:textColor="#02242C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="@string/hobbies_header"
                android:textColor="#02242C"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView2"
            android:layout_width="381dp"
            android:layout_height="99dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/likes"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/likes"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dislikes"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/dislikes"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/hobbies"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/hobbies"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.402">

            <ImageButton
                android:id="@+id/science"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/map"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/science" />

            <ImageButton
                android:id="@+id/map"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/locate" />

            <ImageButton
                android:id="@+id/brush"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toEndOf="@+id/map"
                app:srcCompat="@drawable/brush" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
